Version 3.3.0: Add custom drag image